1. Renamed addofferresponce to addofferrequest 2.Add date and gender implemantion 3.Added some Strings
Merge branch 'shiva' of https://bitbucket.org/shivakoka/connect-incon into ramu

# Conflicts:
#	app/src/main/java/com/incon/connect/ui/scan/ScanTabFragment.java
#	app/src/main/res/values/strings.xml

--- a/app/src/main/res/layout/fragment_add_offer_merchant.xml
+++ b/app/src/main/res/layout/fragment_add_offer_merchant.xml
@@ -3,8 +3,12 @@
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
         <variable
-            name="addoffermerchantfragment"
+            name="addOfferRequest"
+            type="com.incon.connect.dto.addoffer.AddOfferRequest"/>
+        <variable
+            name="addOfferMerchantFragment"
             type="com.incon.connect.ui.addoffer.fragment.AddOfferMerchantFragment"/>
     </data>
     <ScrollView
@@ -22,20 +26,21 @@
             <RelativeLayout
                 style="@style/BothMatch"
                 android:layout_marginTop="30dp">
-
+          <!-- spinner brand -->
                  <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                     android:id="@+id/spinner_brand"
                     style="@style/spinnerItemStyle"
                     android:layout_marginBottom="@dimen/margin_24"
                     android:focusable="true"
+                    android:text="@={addOfferRequest.brandName}"
                     android:hint="@string/add_an_offer_brand_hint"
                     android:tag="2"
                     app:errorEnabled="true"
                     app:met_floatingLabel="highlight"
                     app:met_textColor="@color/colorForgotPasswordHintText"
                     app:met_textColorHint="@color/colorForgotPasswordHintText"/>
-                <!-- spinner division -->
 
+                <!-- spinner division -->
                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                     android:id="@+id/spinner_division"
                     style="@style/spinnerItemStyle"
@@ -43,11 +48,13 @@
                     android:layout_marginBottom="@dimen/margin_24"
                     android:focusable="true"
                     android:hint="@string/add_an_offer_division_hint"
+                    android:text="@={addOfferRequest.division}"
                     android:tag="2"
                     app:errorEnabled="true"
                     app:met_floatingLabel="highlight"
                     app:met_textColor="@color/colorForgotPasswordHintText"
                     app:met_textColorHint="@color/colorForgotPasswordHintText"/>
+
                 <!-- spinner model -->
                 <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                     android:id="@+id/spinner_model"
@@ -55,6 +62,7 @@
                     android:layout_below="@+id/spinner_division"
                     android:layout_marginBottom="@dimen/margin_24"
                     android:focusable="true"
+                    android:text="@={addOfferRequest.model}"
                     android:hint="@string/add_an_offer_model_hint"
                     android:tag="2"
                     app:errorEnabled="true"
@@ -62,9 +70,9 @@
                     app:met_textColor="@color/colorForgotPasswordHintText"
                     app:met_textColorHint="@color/colorForgotPasswordHintText"/>
 
-                <!-- Date  -->
+                <!-- Offers start date selection -->
                 <com.incon.connect.custom.view.CustomTextInputLayout
-                    android:id="@+id/input_layout_date"
+                    android:id="@+id/input_layout_offer_start_on"
                     style="@style/Register_TextInputLayout"
                     android:layout_below="@id/spinner_model"
                     android:hint="@string/add_an_offer_date_hint"
@@ -76,26 +84,48 @@
                         android:id="@+id/edittext_date"
                         style="@style/Register_TextInputEditText"
                         android:enabled="false"
+                        android:text="@={addOfferRequest.offerStartOn}"
                         android:tag="3"/>
                 </com.incon.connect.custom.view.CustomTextInputLayout>
-                <!-- add an offer -->
+           <!-- dummy view for Offers start date selection -->
+                <View
+                    android:id="@+id/view_offer_start_on"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_alignBottom="@+id/input_layout_offer_start_on"
+                    android:layout_alignEnd="@+id/input_layout_offer_start_on"
+                    android:layout_alignStart="@+id/input_layout_offer_start_on"
+                    android:layout_alignTop="@+id/input_layout_offer_start_on"
+                    android:background="@null"
+                    android:onClick="@{() -> addOfferMerchantFragment.onDateClick()}"
+                    />
 
-         <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
-                     android:id="@+id/spinner_add_an_offer"
-                    style="@style/spinnerItemStyle"
-                   android:layout_below="@id/input_layout_date"
-                    android:layout_marginBottom="@dimen/margin_24"
-                    android:focusable="true"
-                    android:hint="@string/add_an_offer_on_MRP_hint"
-                    android:tag="2"
+                <!-- add an offer -->
+           <com.incon.connect.custom.view.CustomTextInputLayout
+                    android:id="@+id/input_layout_add_an_offer"
+                    style="@style/Register_TextInputLayout"
+                   android:layout_below="@id/input_layout_offer_start_on"
+                    android:hint="@string/add_an_offer_on_mrp_hint"
                     app:errorEnabled="true"
-                    app:met_floatingLabel="highlight"
-                    app:met_textColor="@color/colorForgotPasswordHintText"
-                    app:met_textColorHint="@color/colorForgotPasswordHintText"/>
+                    app:fontName="fonts/OpenSans-Regular.ttf"
+                    app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor">
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/edittext_add_an_offer"
+                        style="@style/Register_TextInputEditText"
+                        android:focusable="true"
+                        android:imeOptions="actionNext"
+                        android:inputType="number"
+                        android:maxLength="@integer/character_limit_200"
+                        android:maxLines="1"
+                        android:tag="4"
+                        />
+                </com.incon.connect.custom.view.CustomTextInputLayout>
+
+                    <!-- offer expires date selecter-->
                 <com.incon.connect.custom.view.CustomTextInputLayout
                      android:id="@+id/input_layout_offer_expires"
                     style="@style/Register_TextInputLayout"
-                   android:layout_below="@id/spinner_add_an_offer"
+                   android:layout_below="@id/input_layout_add_an_offer"
                     android:hint="@string/offer_expires_hint"
                     app:errorEnabled="true"
                     app:fontName="fonts/OpenSans-Regular.ttf"
@@ -106,17 +136,31 @@
                         style="@style/Register_TextInputEditText"
                         android:enabled="false"
                         android:tag="3"
+                        android:text="@={addOfferRequest.offerExpiresOn}"
                         />
                 </com.incon.connect.custom.view.CustomTextInputLayout>
+                <!-- dummy view for Offers end date selection -->
+                <View
+                    android:id="@+id/view_date_expire"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_alignBottom="@+id/input_layout_offer_expires"
+                    android:layout_alignEnd="@+id/input_layout_offer_expires"
+                    android:layout_alignStart="@+id/input_layout_offer_expires"
+                    android:layout_alignTop="@+id/input_layout_offer_expires"
+                    android:background="@null"
+                    android:onClick="@{() -> addOfferMerchantFragment.onDateClick()}"
+                    />
 
-               <Button
+
+                <Button
                 android:layout_marginLeft="@dimen/margin_110"
                 android:id="@+id/button_submit"
                 style="@style/w150_wrap"
                 fontPath="fonts/OpenSans-Bold.ttf"
                  android:layout_below="@+id/input_layout_offer_expires"
                 android:layout_marginBottom="@dimen/margin_10"
-                android:layout_marginTop="@dimen/margin_10"
+                android:layout_marginTop="@dimen/margin_5"
                 android:background="@drawable/btn_login_register_roundedcorner"
                 android:text="@string/add_new_submit"
                 android:textAllCaps="true"
