--- a/app/src/main/res/layout/item_buy_request_fragment.xml
+++ b/app/src/main/res/layout/item_buy_request_fragment.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+        xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -9,50 +9,44 @@
             type="com.incon.connect.apimodel.components.buyrequest.BuyRequestResponse"/>
     </data>
 
+    <RelativeLayout
+        style="@style/MatchWrap"
+        android:background="@drawable/list_ripple_effect"
+        android:minHeight="70dp"
+        android:paddingBottom="@dimen/margin_15"
+        android:paddingLeft="@dimen/margin_5"
+        android:paddingRight="@dimen/margin_5"
+        android:paddingTop="@dimen/margin_15">
 
-        <LinearLayout
-            style="@style/MatchWrap"
-            android:gravity="center_horizontal"
-            android:weightSum="3"
-            android:minHeight="@dimen/margin_100"
-            android:orientation="horizontal"
-            >
-            <ImageView
-                style="@style/BothWrap"
-                android:layout_weight="1"
-                android:layout_gravity="center"
-                android:background="@drawable/ic_tab_buy_requests"
-                />
-            <ImageView
-                style="@style/BothWrap"
-                android:layout_weight="1"
-                android:layout_gravity="center"
-                android:background="@drawable/ic_tab_buy_requests"
-                />
-            <LinearLayout
-                style="@style/WrapMatch"
-                android:layout_weight="1"
-                android:layout_gravity="center|center_horizontal"
-                android:orientation="vertical">
-                <TextView
-                    style="@style/BothWrap"
-                    android:text="@string/buy_request_product_info"
-                    />
-                <TextView
-                    style="@style/BothWrap"
-                    android:text="@string/buy_request_product_info"
-                    />
-                <TextView
-                    style="@style/BothWrap"
-                    android:text="@string/buy_request_product_info"
-                    />
-                <TextView
-                    style="@style/BothWrap"
-                    android:text="@string/buy_request_product_info"
-                    />
+        <android.support.v7.widget.AppCompatImageView
+            android:id="@+id/task_iv"
+            style="@style/BothWrap"
+            android:layout_centerVertical="true"
+            android:layout_margin="@dimen/margin_5"
+            app:srcCompat="@drawable/ic_dashboard_alert_svg"/>
 
-            </LinearLayout>
+        <TextView
+            android:id="@+id/text_task_time"
+            style="@style/BothWrap"
+            fontPath="fonts/OpenSans-Bold.ttf"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="@dimen/margin_10"
+            android:text="@{buyRequestResponse.merchantId}"
+            android:textColor="@color/cadet_blue"
+            android:textSize="11.5sp"/>
 
-        </LinearLayout>
+        <TextView
+            android:id="@+id/text_task_title"
+            style="@style/BothWrap"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="@dimen/margin_10"
+            android:layout_marginStart="@dimen/margin_10"
+            android:layout_toEndOf="@id/task_iv"
+            android:text="@{buyRequestResponse.customerId}"
+            android:layout_toStartOf="@id/text_task_time"
+            android:textColor="@color/ebony_clay"
+            android:textSize="13.4sp"/>
 
+    </RelativeLayout>
 </layout>
