1. Added resend for otp validation

--- a/app/src/main/res/layout/view_verify_otp.xml
+++ b/app/src/main/res/layout/view_verify_otp.xml
@@ -35,9 +35,9 @@
                 android:id="@+id/input_layout_verify"
                 style="@style/MatchWrap"
                 android:layout_below="@id/text_verify_title"
-                android:layout_marginEnd="23.5dp"
-                android:layout_marginStart="13.8dp"
+                android:layout_marginStart="14dp"
                 android:layout_marginTop="10dp"
+                android:layout_toLeftOf="@+id/resend_otp_tv"
                 android:hint="@string/register_verify_email_hint"
                 android:textColorHint="@color/colorForgotPasswordHintText"
                 app:errorEnabled="true"
@@ -55,6 +55,22 @@
                     android:textColor="@color/colorForgotPasswordHintText"
                     android:textSize="14sp"/>
             </com.incon.connect.custom.view.CustomTextInputLayout>
+
+            <!-- used to resend password again-->
+            <TextView
+                android:id="@+id/resend_otp_tv"
+                style="@style/BothWrap"
+                android:layout_alignParentEnd="true"
+                android:layout_below="@id/text_verify_title"
+                android:layout_marginEnd="13.dp"
+                android:layout_marginStart="@dimen/margin_0"
+                android:layout_marginTop="6dp"
+                android:background="@android:drawable/ic_menu_revert"
+                android:gravity="bottom"
+                android:paddingBottom="@dimen/margin_5"
+                android:paddingLeft="@dimen/margin_13"
+                android:paddingTop="@dimen/margin_20"
+                android:textSize="24sp"/>
 
             <!-- layout for bottom buttons -->
             <include
