1. Renamed addofferresponce to addofferrequest 2.Add date and gender implemantion 3.Added some Strings 4small changes on buy request fragment . 5.add  permission on manifestfile 6api cal implemented on buyrequest,addoffermerchantfragment 7. changed code on QrcodeScann Class.
Merge branch 'shiva' of https://bitbucket.org/shivakoka/connect-incon into ramu

# Conflicts:
#	app/src/main/java/com/incon/connect/ui/scan/ScanTabFragment.java
#	app/src/main/res/values/strings.xml

implemeted api cals on Interstfragment,returnfragment,buyrequestfragment(not completed), and arranged settings in orderly

--- a/app/src/main/res/layout/activity_qrcode_barcodescan.xml
+++ b/app/src/main/res/layout/activity_qrcode_barcodescan.xml
@@ -5,7 +5,7 @@
     <data>
 
         <variable
-            name="qrcodebarcodescanactivity"
+            name="qrcodeScanActivity"
             type="com.incon.connect.ui.qrcodescan.QrcodeBarcodeScanActivity"/>
 
     </data>
@@ -15,8 +15,8 @@
         android:background="@color/colorPrimary">
 
 
-        <me.dm7.barcodescanner.zxing.ZXingScannerView
-            android:id="@+id/barcodescanner"
+        <com.journeyapps.barcodescanner.CompoundBarcodeView
+            android:id="@+id/qrcode_scanner"
             style="@style/scanner_view"
             />
 
