--- a/app/src/main/res/layout/dummy.xml
+++ b/app/src/main/res/layout/dummy.xml
@@ -3,6 +3,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
         <variable
             name="purchasedHistoryResponse"
             type="com.incon.connect.apimodel.components.history.purchased.PurchasedHistoryResponse"/>
@@ -20,10 +21,8 @@
             android:layout_height="match_parent">
 
             <android.support.v7.widget.AppCompatImageView
-                android:layout_gravity="center"
-
-                style="@style/m75w75"
-                android:layout_margin="25dp"
+                style="@style/BothMatch"
+                android:layout_margin="5dp"
                 app:srcCompat="@drawable/ic_im_showroom"/>
 
         </LinearLayout>
@@ -34,43 +33,67 @@
             android:layout_height="match_parent">
 
             <android.support.v7.widget.AppCompatImageView
-                style="@style/m75w75"
-                android:layout_margin="25dp"
+                style="@style/BothMatch"
+                android:layout_margin="5dp"
                 app:srcCompat="@drawable/ic_im_showroom"
                 />
 
         </LinearLayout>
 
         <LinearLayout
+            android:background="@color/anakiwa"
             android:orientation="vertical"
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+            <TextView
+
+                android:layout_gravity="center"
+                style="@style/BothWrap"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="@dimen/margin_10"
+                android:layout_marginStart="@dimen/margin_10"
+                android:text="mupparaju"
+                android:textColor="@color/ebony_clay"
+                android:textSize="13.4sp"
+                />
+
 
             <TextView
-                android:layout_marginTop="@dimen/margin_7"
+                android:layout_gravity="center"
                 style="@style/BothWrap"
-                android:text="11/10/2017"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="@dimen/margin_10"
+                android:layout_marginStart="@dimen/margin_10"
+                android:text="mupparaju"
                 android:textColor="@color/ebony_clay"
-                android:textSize="10.4sp"
+                android:textSize="13.4sp"
                 />
 
             <TextView
-                android:layout_marginTop="@dimen/margin_15"
-                style="@style/BothWrap"
-                android:text="@{purchasedHistoryResponse.productName}"
-                android:textColor="@color/ebony_clay"
-                android:textSize="12.4sp"
-                />
+
+                android:layout_gravity="center"
+            style="@style/BothWrap"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="@dimen/margin_10"
+            android:layout_marginStart="@dimen/margin_10"
+            android:text="mupparaju"
+            android:textColor="@color/ebony_clay"
+            android:textSize="13.4sp"
+            />
             <TextView
-                android:layout_marginTop="@dimen/margin_12"
-                android:text="@{purchasedHistoryResponse.brandName}"
+                android:layout_gravity="center"
                 style="@style/BothWrap"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="@dimen/margin_10"
+                android:layout_marginStart="@dimen/margin_10"
+                android:text="mupparaju"
                 android:textColor="@color/ebony_clay"
-                android:textSize="12.4sp"
+                android:textSize="13.4sp"
                 />
 
         </LinearLayout>
+
 
     </LinearLayout>
 </layout>
