--- a/app/src/main/res/layout/fragment_purchased.xml
+++ b/app/src/main/res/layout/fragment_purchased.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     >
+    <data>
+
+        <variable
+            name="purchasedFragment"
+            type="com.incon.connect.ui.history.fragments.PurchasedFragment"/>
+    </data>
 
     <RelativeLayout
         style="@style/BothMatch"
