--- a/app/src/main/res/layout/item_purchased_fragment.xml
+++ b/app/src/main/res/layout/item_purchased_fragment.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -15,59 +15,68 @@
         android:minHeight="70dp"
         android:orientation="horizontal"
         android:weightSum="3">
-
         <LinearLayout
-            style="@style/BothMatch"
+            style="@style/Zero_wrap"
+            android:orientation="vertical"
+            android:layout_gravity="center"
             android:layout_weight="1">
 
             <ImageView
                 android:id="@+id/brand_imageview"
-                style="@style/m75w75"
-                android:layout_margin="25dp"
-                />
+                android:layout_gravity="center"
+                style="@style/m75w75"/>
 
         </LinearLayout>
 
         <LinearLayout
-            style="@style/BothMatch"
+            android:layout_gravity="center"
+            style="@style/Zero_wrap"
+            android:orientation="vertical"
             android:layout_weight="1">
 
             <ImageView
                 android:id="@+id/product_image_imageview"
-                style="@style/m75w75"
-                android:layout_margin="25dp"
-                />
+                android:layout_gravity="center"
+                style="@style/m75w75"/>
 
         </LinearLayout>
 
         <LinearLayout
-            style="@style/BothMatch"
+            android:gravity="center"
+            style="@style/Zero_wrap"
             android:layout_weight="1"
-            android:orientation="vertical">
-
-            <TextView
+            android:layout_gravity="center_horizontal"
+            android:orientation="vertical"
+            >
+            <LinearLayout
                 style="@style/BothWrap"
-                android:layout_marginTop="@dimen/margin_7"
-                android:text="11/10/2017"
-                android:textColor="@color/ebony_clay"
-                android:textSize="10.4sp"
-                />
+                android:gravity="start"
+                android:orientation="vertical">
+                <TextView
+                    style="@style/BothWrap"
+                    android:layout_marginTop="@dimen/margin_7"
+                    android:text="11/10/2017"
+                    android:textColor="@color/ebony_clay"
+                    android:textSize="10.4sp"
+                    />
 
-            <TextView
-                style="@style/BothWrap"
-                android:layout_marginTop="@dimen/margin_15"
-                android:text="@{purchasedHistoryResponse.productName}"
-                android:textColor="@color/ebony_clay"
-                android:textSize="12.4sp"
-                />
+                <TextView
+                    style="@style/BothWrap"
+                    android:layout_marginTop="@dimen/margin_15"
+                    android:text="@{purchasedHistoryResponse.productName}"
+                    android:textColor="@color/ebony_clay"
+                    android:textSize="12.4sp"
+                    />
 
-            <TextView
-                style="@style/BothWrap"
-                android:layout_marginTop="@dimen/margin_12"
-                android:text="@{purchasedHistoryResponse.brandName}"
-                android:textColor="@color/ebony_clay"
-                android:textSize="12.4sp"
-                />
+                <TextView
+                    style="@style/BothWrap"
+                    android:layout_marginTop="@dimen/margin_12"
+                    android:text="@{purchasedHistoryResponse.brandName}"
+                    android:textColor="@color/ebony_clay"
+                    android:textSize="12.4sp"
+                    />
+            </LinearLayout>
+
 
         </LinearLayout>
 
