--- a/app/src/main/res/layout/fragment_add_offer_merchant.xml
+++ b/app/src/main/res/layout/fragment_add_offer_merchant.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -26,8 +26,8 @@
             <RelativeLayout
                 style="@style/BothMatch"
                 android:layout_marginTop="30dp">
-          <!-- spinner brand -->
-                 <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
+                <!-- spinner brand -->
+                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                     android:id="@+id/spinner_brand"
                     style="@style/spinnerItemStyle"
                     android:layout_marginBottom="@dimen/margin_24"
@@ -41,7 +41,7 @@
                     app:met_textColorHint="@color/colorForgotPasswordHintText"/>
 
                 <!-- spinner division -->
-               <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
+                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                     android:id="@+id/spinner_division"
                     style="@style/spinnerItemStyle"
                     android:layout_below="@+id/spinner_brand"
@@ -87,7 +87,7 @@
                         android:text="@={addOfferRequest.fromDate}"
                         android:tag="3"/>
                 </com.incon.connect.custom.view.CustomTextInputLayout>
-           <!-- dummy view for Offers start date selection -->
+                <!-- dummy view for Offers start date selection -->
                 <View
                     android:id="@+id/view_offer_start_on"
                     android:layout_width="match_parent"
@@ -101,10 +101,10 @@
                     />
 
                 <!-- add an offer -->
-           <com.incon.connect.custom.view.CustomTextInputLayout
+                <com.incon.connect.custom.view.CustomTextInputLayout
                     android:id="@+id/input_layout_add_an_offer"
                     style="@style/Register_TextInputLayout"
-                   android:layout_below="@id/input_layout_offer_start_on"
+                    android:layout_below="@id/input_layout_offer_start_on"
                     android:hint="@string/add_an_offer_on_mrp_hint"
                     app:errorEnabled="true"
                     app:fontName="fonts/OpenSans-Regular.ttf"
@@ -114,6 +114,7 @@
                         style="@style/Register_TextInputEditText"
                         android:focusable="true"
                         android:imeOptions="actionNext"
+                        android:text="@={addOfferRequest.offer}"
                         android:inputType="number"
                         android:maxLength="@integer/character_limit_200"
                         android:maxLines="1"
@@ -121,11 +122,11 @@
                         />
                 </com.incon.connect.custom.view.CustomTextInputLayout>
 
-                    <!-- offer expires date selecter-->
+                <!-- offer expires date selecter-->
                 <com.incon.connect.custom.view.CustomTextInputLayout
-                     android:id="@+id/input_layout_offer_expires"
+                    android:id="@+id/input_layout_offer_expires"
                     style="@style/Register_TextInputLayout"
-                   android:layout_below="@id/input_layout_add_an_offer"
+                    android:layout_below="@id/input_layout_add_an_offer"
                     android:hint="@string/offer_expires_hint"
                     app:errorEnabled="true"
                     app:fontName="fonts/OpenSans-Regular.ttf"
@@ -154,18 +155,19 @@
 
 
                 <Button
-                android:layout_marginLeft="@dimen/margin_110"
-                android:id="@+id/button_submit"
-                style="@style/w150_wrap"
-                fontPath="fonts/OpenSans-Bold.ttf"
-                 android:layout_below="@+id/input_layout_offer_expires"
-                android:layout_marginBottom="@dimen/margin_10"
-                android:layout_marginTop="@dimen/margin_5"
-                android:background="@drawable/btn_login_register_roundedcorner"
-                android:text="@string/add_new_submit"
-                android:textAllCaps="true"
-                android:textColor="@color/tueo_theme"
-                android:textSize="@dimen/text_size_13"/>
+                    android:layout_marginLeft="@dimen/margin_110"
+                    android:id="@+id/button_submit"
+                    style="@style/w150_wrap"
+                    fontPath="fonts/OpenSans-Bold.ttf"
+                    android:layout_below="@+id/input_layout_offer_expires"
+                    android:layout_marginBottom="@dimen/margin_10"
+                    android:layout_marginTop="@dimen/margin_5"
+                    android:background="@drawable/btn_login_register_roundedcorner"
+                    android:text="@string/add_new_submit"
+                    android:textAllCaps="true"
+                    android:onClick="@{() -> addOfferMerchantFragment.onSubmitClick()}"
+                    android:textColor="@color/tueo_theme"
+                    android:textSize="@dimen/text_size_13"/>
 
             </RelativeLayout>
 
