--- a/app/src/main/res/layout/fragment_history_tab.xml
+++ b/app/src/main/res/layout/fragment_history_tab.xml
@@ -24,7 +24,6 @@
                     android:layout_below="@+id/appbar"
                     app:layout_collapseMode="parallax">
 
-
                     <android.support.design.widget.TabLayout
                         android:id="@+id/tab_layout"
                         style="@style/MatchWrap"
@@ -33,29 +32,25 @@
                         android:fillViewport="true"
                         android:minHeight="?attr/actionBarSize"
                         android:theme="@style/AppTheme"
-
                         app:tabIndicatorColor="@color/denim"
                         app:tabMode="fixed"
                         app:tabSelectedTextColor="@color/white"
                         app:tabTextColor="@color/white"/>
 
-                    <EditText
-                        android:id="@+id/et_search_purchased"
-                        style="@style/Match_50"
+                    <include
+                        android:id="@+id/search_layout"
+                        layout="@layout/search_ui"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_below="@+id/tab_layout"
-                        android:background="@color/white"
-                        android:drawableEnd="@android:drawable/ic_menu_search"
-                        android:imeOptions="actionSearch"
-                        android:textColor="@color/black"
                         />
 
                     <include
                         layout="@layout/item_list_header"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/et_search_purchased"
+                        android:layout_below="@+id/search_layout"
                         />
-
 
                 </RelativeLayout>
 
