--- a/app/src/main/res/layout/fragment_buy_request.xml
+++ b/app/src/main/res/layout/fragment_buy_request.xml
@@ -1,28 +1,54 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <RelativeLayout
-        style="@style/BothMatch"
-        android:background="@color/wild_sand">
+    <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/main_container"
+        style="@style/MatchWrap">
 
-        <EditText
-            android:id="@+id/et_search_buy_request"
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/appbar"
             style="@style/MatchWrap"
-            android:drawableEnd="@android:drawable/ic_menu_search"
-            />
+            android:fitsSystemWindows="true"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-        <include
-            android:id="@+id/list_header"
-            layout="@layout/item_list_header"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/et_search_buy_request"
-            />
+            <android.support.design.widget.CollapsingToolbarLayout
+                style="@style/MatchWrap"
+                android:fitsSystemWindows="true"
+                app:contentScrim="?attr/colorPrimary"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
+                >
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_below="@+id/appbar"
+                    app:layout_collapseMode="parallax">
+
+                    <include
+                        android:id="@+id/search_layout"
+                        layout="@layout/search_ui"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/tab_layout"
+                        />
+
+                    <include
+                        android:id="@+id/list_header"
+                        layout="@layout/item_list_header"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/search_layout"
+                        />
+                </RelativeLayout>
+            </android.support.design.widget.CollapsingToolbarLayout>
+
+        </android.support.design.widget.AppBarLayout>
 
         <android.support.v4.widget.SwipeRefreshLayout
             android:id="@+id/swiperefresh"
             style="@style/BothMatch"
-            android:layout_below="@+id/list_header"
+            android:background="@color/white"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
             >
 
             <android.support.v7.widget.RecyclerView
@@ -36,6 +62,5 @@
 
         </android.support.v4.widget.SwipeRefreshLayout>
 
-    </RelativeLayout>
-
+    </android.support.design.widget.CoordinatorLayout>
 </layout>
