--- a/app/src/main/res/layout/fragment_add_new_model.xml
+++ b/app/src/main/res/layout/fragment_add_new_model.xml
@@ -17,156 +17,153 @@
     <ScrollView
         android:id="@+id/scrollview_user_info"
         style="@style/BothMatch"
+        android:background="@color/white"
         android:fadeScrollbars="false"
         android:scrollbarSize="4dp"
         android:scrollbarThumbVertical="@drawable/scrollbar"
         android:scrollbars="vertical">
 
-    <RelativeLayout
-        style="@style/BothMatch"
-        android:background="@color/white">
-
-
         <RelativeLayout
             style="@style/BothMatch"
-            android:layout_marginTop="30dp"
-            >
+            android:background="@color/white">
 
-            <!-- modelno -->
-            <com.incon.connect.custom.view.CustomTextInputLayout
-                android:id="@+id/input_layout_model_number"
-                style="@style/Add_new_model_TextInputLayout"
-                android:hint="@string/add_new__model_no"
-                app:errorEnabled="true"
-                app:fontName="fonts/OpenSans-Regular.ttf"
-                app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor">
 
-                <android.support.design.widget.TextInputEditText
+            <LinearLayout
+                style="@style/BothMatch"
+                android:layout_marginTop="30dp"
+                android:orientation="vertical"
+                >
+
+                <!-- modelno -->
+                <com.incon.connect.custom.view.CustomTextInputLayout
+                    android:id="@+id/input_layout_model_number"
+                    style="@style/Add_new_model_TextInputLayout"
+                    android:hint="@string/add_new__model_no"
+                    app:errorEnabled="true"
+                    app:fontName="fonts/OpenSans-Regular.ttf"
+                    app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor">
+
+                    <android.support.design.widget.TextInputEditText
                         android:id="@+id/edittext_model_number"
                         style="@style/Add_new_model_TextInputEditText"
                         android:focusable="true"
                         android:imeOptions="actionNext"
                         android:inputType="textCapWords"
                         android:maxLength="@integer/character_limit_45"
-                        android:text="@={addNewModel.productModel}"
                         android:maxLines="1"
                         android:tag="1"
+                        android:text="@={addNewModel.productModel}"
                         />
 
-            </com.incon.connect.custom.view.CustomTextInputLayout>
+                </com.incon.connect.custom.view.CustomTextInputLayout>
 
-            <!-- category-->
-            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
-                android:id="@+id/spinner_category"
-                style="@style/spinnerItemStyle"
-                android:layout_below="@id/input_layout_model_number"
-                android:layout_marginBottom="@dimen/margin_24"
-                android:focusable="true"
-                android:hint="@string/add_new__category"
-                android:tag="2"
-                android:text="@={addNewModel.categoryId}"
-                app:errorEnabled="true"
-                app:met_floatingLabel="highlight"
-                app:met_textColor="@color/colorForgotPasswordHintText"
-                app:met_textColorHint="@color/colorForgotPasswordHintText"/>
-
-
-            <!-- division no -->
-            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
-                android:id="@+id/spinner_division"
-                style="@style/spinnerItemStyle"
-                android:layout_below="@id/spinner_category"
-                android:layout_marginBottom="@dimen/margin_24"
-                android:focusable="true"
-                android:hint="@string/add_new__division"
-                android:text="@={addNewModel.divisionId}"
-                android:tag="2"
-                app:errorEnabled="true"
-                app:met_floatingLabel="highlight"
-                app:met_textColor="@color/colorForgotPasswordHintText"
-                app:met_textColorHint="@color/colorForgotPasswordHintText"/>
-
-
-
-
-            <!--brand-->
-            <com.incon.connect.custom.view.CustomTextInputLayout
-                android:id="@+id/input_layout_brand"
-                style="@style/Add_new_model_TextInputLayout"
-                android:hint="@string/action_brand"
-                android:layout_below="@id/spinner_division"
-                app:errorEnabled="true"
-                app:fontName="fonts/OpenSans-Regular.ttf"
-                app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor">
-
-                <com.incon.connect.custom.view.CustomAutoCompleteView
-                    android:id="@+id/edittext_brand"
-                    style="@style/Register_TextInputEditText"
-                    android:maxLength="@integer/character_limit_100"
-                    android:maxLines="1"
-                    android:text="@={addNewModel.productModel}"/>
-
-            </com.incon.connect.custom.view.CustomTextInputLayout>
-
-
-            <!-- type -->
-            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
-                android:id="@+id/spinner_type"
-                style="@style/spinnerItemStyle"
-                android:layout_below="@id/input_layout_brand"
-                android:layout_marginBottom="@dimen/margin_24"
-                android:focusable="true"
-                android:hint="@string/add_new__type"
-                android:text="@={addNewModel.divisionId}"
-                android:tag="2"
-                app:errorEnabled="true"
-                app:met_floatingLabel="highlight"
-                app:met_textColor="@color/colorForgotPasswordHintText"
-                app:met_textColorHint="@color/colorForgotPasswordHintText"/>
-
-            <!--price-->
-            <com.incon.connect.custom.view.CustomTextInputLayout
-                android:id="@+id/input_layout_price"
-                style="@style/Add_new_model_TextInputLayout"
-                android:layout_below="@id/spinner_type"
-                android:hint="@string/add_new__price"
-                app:errorEnabled="true"
-                app:fontName="fonts/OpenSans-Regular.ttf"
-                app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor">
-
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/edittext_register_phone"
-                    style="@style/Add_new_model_TextInputEditText"
+                <!-- category-->
+                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
+                    android:id="@+id/spinner_category"
+                    style="@style/spinnerItemStyle"
+                    android:layout_below="@id/input_layout_model_number"
+                    android:layout_marginBottom="@dimen/margin_24"
                     android:focusable="true"
-                    android:imeOptions="actionNext"
-                    android:inputType="number"
-                    android:maxLength="@integer/character_limit_45"
-                    android:text="@={addNewModel.price}"
-                    android:maxLines="1"
-                    android:tag="1"
-                    />
-            </com.incon.connect.custom.view.CustomTextInputLayout>
+                    android:hint="@string/add_new__category"
+                    android:tag="2"
+                    android:text="@={addNewModel.categoryId}"
+                    android:visibility="gone"
+                    app:errorEnabled="true"
+                    app:met_floatingLabel="highlight"
+                    app:met_textColor="@color/colorForgotPasswordHintText"
+                    app:met_textColorHint="@color/colorForgotPasswordHintText"/>
 
-            <!--submit-->
-            <Button
-                android:id="@+id/button_submit"
-                style="@style/w150_wrap"
-                fontPath="fonts/OpenSans-Bold.ttf"
-                android:layout_below="@id/input_layout_price"
-                android:layout_marginBottom="@dimen/margin_10"
-                android:layout_marginLeft="@dimen/margin_110"
-                android:layout_marginTop="@dimen/margin_10"
-                android:background="@drawable/btn_login_register_roundedcorner"
-                android:text="@string/add_new_submit"
-                android:onClick="@{() -> addNewModelFragment.onSubmitClick()}"
-                android:textAllCaps="true"
-                android:textColor="@color/tueo_theme"
-                android:textSize="@dimen/text_size_13"/>
+                <!-- division no -->
+                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
+                    android:id="@+id/spinner_division"
+                    style="@style/spinnerItemStyle"
+                    android:layout_below="@id/spinner_category"
+                    android:layout_marginBottom="@dimen/margin_24"
+                    android:focusable="true"
+                    android:hint="@string/add_new__division"
+                    android:tag="2"
+                    android:text="@={addNewModel.divisionId}"
+                    android:visibility="gone"
+                    app:errorEnabled="true"
+                    app:met_floatingLabel="highlight"
+                    app:met_textColor="@color/colorForgotPasswordHintText"
+                    app:met_textColorHint="@color/colorForgotPasswordHintText"/>
 
+                <!--brand-->
+                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
+                    android:id="@+id/spinner_brand"
+                    style="@style/spinnerItemStyle"
+                    android:layout_below="@id/spinner_division"
+                    android:layout_marginBottom="@dimen/margin_24"
+                    android:focusable="true"
+                    android:hint="@string/action_brand"
+                    android:tag="2"
+                    android:text="@={addNewModel.productBrand}"
+                    android:visibility="gone"
+                    app:errorEnabled="true"
+                    app:met_floatingLabel="highlight"
+                    app:met_textColor="@color/colorForgotPasswordHintText"
+                    app:met_textColorHint="@color/colorForgotPasswordHintText"/>
+
+                <!-- type -->
+                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
+                    android:id="@+id/spinner_type"
+                    style="@style/spinnerItemStyle"
+                    android:layout_marginBottom="@dimen/margin_24"
+                    android:focusable="true"
+                    android:hint="@string/add_new__type"
+                    android:tag="2"
+                    android:text="@={addNewModel.divisionId}"
+                    android:visibility="gone"
+                    app:errorEnabled="true"
+                    app:met_floatingLabel="highlight"
+                    app:met_textColor="@color/colorForgotPasswordHintText"
+                    app:met_textColorHint="@color/colorForgotPasswordHintText"/>
+
+                <!--price-->
+                <com.incon.connect.custom.view.CustomTextInputLayout
+                    android:id="@+id/input_layout_price"
+                    style="@style/Add_new_model_TextInputLayout"
+                    android:layout_below="@id/spinner_type"
+                    android:hint="@string/add_new__price"
+                    android:visibility="gone"
+                    app:errorEnabled="true"
+                    app:fontName="fonts/OpenSans-Regular.ttf"
+                    app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor">
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/edittext_register_phone"
+                        style="@style/Add_new_model_TextInputEditText"
+                        android:focusable="true"
+                        android:imeOptions="actionNext"
+                        android:inputType="number"
+                        android:maxLength="@integer/character_limit_45"
+                        android:maxLines="1"
+                        android:tag="1"
+                        android:text="@={addNewModel.price}"
+                        />
+                </com.incon.connect.custom.view.CustomTextInputLayout>
+
+                <!--submit-->
+                <Button
+                    android:id="@+id/button_submit"
+                    style="@style/w150_wrap"
+                    fontPath="fonts/OpenSans-Bold.ttf"
+                    android:layout_below="@id/input_layout_price"
+                    android:layout_marginBottom="@dimen/margin_10"
+                    android:layout_marginLeft="@dimen/margin_110"
+                    android:layout_marginTop="@dimen/margin_10"
+                    android:background="@drawable/btn_login_register_roundedcorner"
+                    android:onClick="@{() -> addNewModelFragment.onSubmitClick()}"
+                    android:text="@string/add_new_submit"
+                    android:textAllCaps="true"
+                    android:textColor="@color/tueo_theme"
+                    android:textSize="@dimen/text_size_13"/>
+
+
+            </LinearLayout>
 
         </RelativeLayout>
-
-    </RelativeLayout>
 
 
     </ScrollView>
